fix table button and padding on mobile

--- a/includes/front-assets/css/table.css
+++ b/includes/front-assets/css/table.css
@@ -15,7 +15,7 @@
     justify-content: center;
 }
 .ncp-prices {
-    gap: 1.5rem;
+    gap: 14px;
     flex-wrap: wrap;
     justify-content: center;
 }
